--- a/styles/styles.css
+++ b/styles/styles.css
@@ -102,6 +102,8 @@
   justify-content: space-around;
   align-items: 70%;
   margin: 10px;
+  color: #000;
+  font-size: 25px;
 }
 
 .modal-container > div > img {
@@ -114,4 +116,9 @@
   padding: 20px;
   text-align: center;
   padding-top: 20px;
+}
+
+/* segunda parte */
+.delete-product {
+  cursor: pointer;
 }/*# sourceMappingURL=styles.css.map */
